welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:7: error: not found: value piositionFinale
    positionFinale=piositionFinale()
                   ^SnakeBuggle:17: error: not found: value EAST
    if (getDirection()==EAST) 
                        ^SnakeBuggle:35: error: not found: value EAST
    if (getDirection()==EAST) 
                        ^